Add optional number parameter
Can be used to specify the build/patch number, instead of incrementing the existing number by 1.

Intended usecase is to pass the GITHUB_RUN_ID as the patch/build number.

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ Thumbs.db
 # Ignore built ts files
 __tests__/runner/*
 # lib/**/* # for Github Action
+
+# Ignore .csproj file used for development and testing
+dev-proj.csproj
