--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -116,7 +116,7 @@
         "@typescript-eslint/no-empty-interface": "error",
         "@typescript-eslint/no-explicit-any": "error",
         "@typescript-eslint/no-extra-non-null-assertion": "error",
-        "@typescript-eslint/no-extra-parens": "error",
+        "@typescript-eslint/no-extra-parens": ["error", "all", { "returnAssign": false }],
         "@typescript-eslint/no-extra-semi": "error",
         "@typescript-eslint/no-extraneous-class": "error",
         "@typescript-eslint/no-floating-promises": "error",
