--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
-        "target": "es6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
-        "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+        "alwaysStrict": true /* Ensures that your files are parsed in the ECMAScript strict mode, and emit “use strict” for each source file.*/,
+        "target": "ES6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015/ES6', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', 'ES2022' or 'ESNEXT'. */,
+        "module": "Node16" /* Specify module code generation: 'None', 'CommonJS', 'AMD', 'UMD', 'System', 'ES2015/ES6', 'ES2020', 'ES2022', 'ESNext', 'Node16' or 'NodeNext'. */,
         "outDir": "./lib" /* Redirect output structure to the directory. */,
         "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
         "strict": true /* Enable all strict type-checking options. */,
